--- a/projects/operative-situation/src/app/features/operative-situation/components/report/report.component.less
+++ b/projects/operative-situation/src/app/features/operative-situation/components/report/report.component.less
@@ -2,6 +2,8 @@
   font-family: "Open Sans Light";
   border: none;
   min-height: 206px;
+  background: white;
+  border-radius: 6px;
 
   tbody {
     border: none;
@@ -130,6 +132,13 @@
   }
 }
 
+.row-caption {
+  display: block;
+  margin-bottom: 20px;
+  font-family: 'Open Sans Regular';
+  font-size: 18px;
+  color: #778f9b;
+}
 
 .no-report-placeholder {
   display: flex;
