OSR2: Add report dialog changes

--- a/projects/operative-situation/src/styles.less
+++ b/projects/operative-situation/src/styles.less
@@ -4,6 +4,7 @@
 @import './styles/fonts';
 @import './styles/sign-in-dialog';
 @import './styles/sign-in-backdrop';
+@import './styles/form-step-dialog';
 @import './styles/sidebar';
 @import './styles/reports';
 
