--- a/projects/operative-situation/src/app/features/operative-situation/components/form-with-steps/form-with-steps.component.less
+++ b/projects/operative-situation/src/app/features/operative-situation/components/form-with-steps/form-with-steps.component.less
@@ -36,7 +36,7 @@
   display: flex;
   flex-direction: row;
   height: 550px;
-  border: 1px solid lightgray;
+  // border: 1px solid lightgray;
 
   .form-control-panel {
     display: flex;
