--- a/projects/operative-situation/src/app/features/operative-situation/components/report-add-dialog/report-add-dialog.component.html
+++ b/projects/operative-situation/src/app/features/operative-situation/components/report-add-dialog/report-add-dialog.component.html
@@ -3,73 +3,17 @@
     [caption]="'Оборудование 35-150 кВ'"
     [description]="'Оборудование и последствия'"
     [icon]="'fas fa-charging-station'"
-    [isValid]="true">
-    <table class="d-flex operative-situation-reports w-100" [formGroup]="equipment35150Form">
-      <tr>
-        <th colspan="4" scope="colgroup" class="top border-right" style="border-color: #E0E0E0 !important;">Отключенное оборудование по сети 35-150 кВ</th>
-      </tr>
-      <tr>
-        <th scope="col" class="font-weight-normal border-right">ЛЭП 110-150 кВ, шт</th>
-        <th scope="col" class="font-weight-normal border-right">ЛЭП 35 кВ, шт.</th>
-        <th scope="col" class="font-weight-normal border-right">ПС 110 -150 кВ, шт</th>
-        <th scope="col" class="font-weight-normal border-right">ПС 35 кВ, шт</th>
-      </tr>
-      <tr class="content">
-        <td class="border-right">
-          <mat-form-field>
-            <input matInput formControlName="lep_110_150">
-          </mat-form-field>
-        </td>
-        <td class="border-right">
-          <mat-form-field>
-            <input matInput formControlName="lep_35">
-          </mat-form-field>
-        <td class="border-right">
-        <mat-form-field>
-          <input matInput formControlName="ps_110_150">
-        </mat-form-field>
-      </td>
-        <td class="border-right">
-          <mat-form-field>
-            <input matInput formControlName="ps_35">
-          </mat-form-field>
-        </td>
-      </tr>
-    </table>
-    <table class="d-flex operative-situation-reports w-100">
-      <tr>
-        <th colspan="4" scope="colgroup" class="top  border-right">Последствия для потребителей по сети 35-150 кВ</th>
-      </tr>
-      <tr>
-        <th scope="col" class="font-weight-normal border-right">ТП 6-20 кВ, шт</th>
-        <th scope="col" class="font-weight-normal border-right">Население, чел</th>
-        <th scope="col" class="font-weight-normal border-right">Нагрузка, МВт</th>
-        <th scope="col" class="font-weight-normal border-right">СЗО, шт</th>
-      </tr>
-      <tr class="content">
-        <td class="border-right">{{newReport.equipment_35_150.effect.tp_6_20}}</td>
-        <td class="border-right">{{newReport.equipment_35_150.effect.population}}</td>
-        <td class="border-right">{{newReport.equipment_35_150.effect.power}}</td>
-        <td class="border-right">{{newReport.equipment_35_150.effect.szo}}</td>
-      </tr>
-    </table>
-  </app-form-step>
-
-  <app-form-step
-    [caption]="'Распределительная сеть'"
-    [description]="'Оборудование и последствия'"
-    [icon]="'fas fa-plug'"
-    [isValid]="true">
+    [isInvalid]="equipment35150Form.invalid">
     <div class="container-fluid h-100">
       <div class="row h-100">
-        <div class="col-6 border-right">
+        <div class="col-6 border-right" [formGroup]="equipment35150Form">
           <div class="section-caption mb-5">Оборудование</div>
 
           <div class="row">
             <div class="col-12">
               <mat-form-field appearance="fill" class="w-100">
-                <mat-label>ЛЭП 6-20 кВ, шт.</mat-label>
-                <input type="number" matInput formControlName="ps_35">
+                <mat-label>ЛЭП 110-150 кВ, шт.</mat-label>
+                <input type="number" matInput formControlName="lep_110_150">
               </mat-form-field>
             </div>
           </div>
@@ -77,20 +21,47 @@
           <div class="row">
             <div class="col-12">
               <mat-form-field appearance="fill" class="w-100">
-                <mat-label>ТП 6-20 кВ, шт.</mat-label>
-                <input type="number"  matInput formControlName="ps_35">
+                <mat-label>ЛЭП 35 кВ, шт.</mat-label>
+                <input type="number"  matInput formControlName="lep_35">
+              </mat-form-field>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-12">
+              <mat-form-field appearance="fill" class="w-100">
+                <mat-label>ПС 110 -150 кВ, шт.</mat-label>
+                <input type="number" matInput formControlName="ps_110_150">
+              </mat-form-field>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-12">
+              <mat-form-field appearance="fill" class="w-100">
+                <mat-label>ПС 35 кВ, шт.</mat-label>
+                <input type="number" matInput formControlName="ps_35">
               </mat-form-field>
             </div>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-6" [formGroup]="equipment35150Form">
           <div class="section-caption mb-5">Последствия для потребителей</div>
 
           <div class="row">
             <div class="col-12">
               <mat-form-field appearance="fill" class="w-100">
+                <mat-label>ТП 6-20 кВ, шт.</mat-label>
+                <input type="number" type="number" matInput formControlName="tp_6_20_effect_110_150">
+              </mat-form-field>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-12">
+              <mat-form-field appearance="fill" class="w-100">
                 <mat-label>Население, чел</mat-label>
-                <input type="number" type="number" matInput formControlName="ps_35">
+                <input matInput formControlName="population_effect_110_150">
               </mat-form-field>
             </div>
           </div>
@@ -99,7 +70,69 @@
             <div class="col-12">
               <mat-form-field appearance="fill" class="w-100">
                 <mat-label>Нагрузка, МВт</mat-label>
-                <input matInput formControlName="ps_35">
+                <input matInput formControlName="power_effect_110_150">
+              </mat-form-field>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-12">
+              <mat-form-field appearance="fill" class="w-100">
+                <mat-label>СЗО, шт</mat-label>
+                <input matInput formControlName="szo_effect_110_150">
+              </mat-form-field>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </app-form-step>
+
+  <app-form-step
+    [caption]="'Распределительная сеть'"
+    [description]="'Оборудование и последствия'"
+    [icon]="'fas fa-plug'"
+    [isInvalid]="equipmentNetworkForm.invalid">
+    <div class="container-fluid h-100">
+      <div class="row h-100">
+        <div class="col-6 border-right" [formGroup]="equipmentNetworkForm">
+          <div class="section-caption mb-5">Оборудование</div>
+
+          <div class="row">
+            <div class="col-12">
+              <mat-form-field appearance="fill" class="w-100">
+                <mat-label>ЛЭП 6-20 кВ, шт.</mat-label>
+                <input type="number" matInput formControlName="lep_6_20">
+              </mat-form-field>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-12">
+              <mat-form-field appearance="fill" class="w-100">
+                <mat-label>ТП 6-20 кВ, шт.</mat-label>
+                <input type="number"  matInput formControlName="tp_6_20">
+              </mat-form-field>
+            </div>
+          </div>
+        </div>
+        <div class="col-6" [formGroup]="equipmentNetworkForm">
+          <div class="section-caption mb-5">Последствия для потребителей</div>
+
+          <div class="row">
+            <div class="col-12">
+              <mat-form-field appearance="fill" class="w-100">
+                <mat-label>Население, чел</mat-label>
+                <input type="number" type="number" matInput formControlName="population_effect_network">
+              </mat-form-field>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-12">
+              <mat-form-field appearance="fill" class="w-100">
+                <mat-label>Нагрузка, МВт</mat-label>
+                <input matInput formControlName="power_effect_network">
               </mat-form-field>
             </div>
           </div>
@@ -108,7 +141,7 @@
             <div class="col-12">
               <mat-form-field appearance="fill" class="w-100">
                 <mat-label>СЗО, шт.</mat-label>
-                <input matInput formControlName="ps_35">
+                <input matInput formControlName="szo_effect_network">
               </mat-form-field>
             </div>
           </div>
@@ -121,8 +154,71 @@
     [caption]="'Задейств. ресурсы'"
     [description]="'Люди, бригады, техника'"
     [icon]="'fas fa-car'"
-    [isInvalid]="true">
-    ouiou
+    [isInvalid]="resourcesForm.invalid">
+    <div class="container-fluid h-100">
+      <div class="row h-100">
+        <div class="col-6 border-right" [formGroup]="resourcesForm">
+          <div class="section-caption mb-5">Задействованные РИСЭ</div>
+
+          <div class="row">
+            <div class="col-12">
+              <mat-form-field appearance="fill" class="w-100">
+                <mat-label>Количество, шт</mat-label>
+                <input type="number" matInput formControlName="resources_rise">
+              </mat-form-field>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-12">
+              <mat-form-field appearance="fill" class="w-100">
+                <mat-label>P∑, кВт</mat-label>
+                <input type="number"  matInput formControlName="resources_rise_sum_power">
+              </mat-form-field>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-12">
+              <mat-form-field appearance="fill" class="w-100">
+                <mat-label>Запитано от РИСЭ, чел</mat-label>
+                <input type="number" matInput formControlName="resources_rise_people">
+              </mat-form-field>
+            </div>
+          </div>
+        </div>
+        <div class="col-6" [formGroup]="resourcesForm">
+          <div class="section-caption mb-5">Задействованные силы и средства</div>
+
+          <div class="row">
+            <div class="col-12">
+              <mat-form-field appearance="fill" class="w-100">
+                <mat-label>Бригад, шт</mat-label>
+                <input type="number" type="number" matInput formControlName="resources_brigades">
+              </mat-form-field>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-12">
+              <mat-form-field appearance="fill" class="w-100">
+                <mat-label>Человек</mat-label>
+                <input matInput type="number" formControlName="resources_people">
+              </mat-form-field>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-12">
+              <mat-form-field appearance="fill" class="w-100">
+                <mat-label>Единиц техники, шт</mat-label>
+                <input matInput type="number" formControlName="resources_technics">
+              </mat-form-field>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </app-form-step>
 
   <app-form-step
