--- a/projects/operative-situation/src/app/features/operative-situation/components/form-with-steps/form-with-steps.component.html
+++ b/projects/operative-situation/src/app/features/operative-situation/components/form-with-steps/form-with-steps.component.html
@@ -25,6 +25,7 @@
     <div class="controls">
       <button class="w-100 pt-2 pb-2"
               mat-raised-button
+              color="primary"
               (click)="processForm()">
         {{actionTitle}}
       </button>
