--- a/projects/operative-situation/src/app/features/operative-situation/components/report-add-dialog/report-add-dialog.component.html
+++ b/projects/operative-situation/src/app/features/operative-situation/components/report-add-dialog/report-add-dialog.component.html
@@ -223,7 +223,7 @@
 
   <app-form-step
     [caption]="'Нарушения'"
-    [description]="'Зафиксированные нарушения'"
+    [description]="'Технологические нарушения'"
     [icon]="'fas fa-exclamation-circle'"
     [isInvalid]="true">
     ouiou
