OSR2: Minor changes

--- a/projects/operative-situation/src/app/features/operative-situation/components/reports-time-table/reports-time-table.component.less
+++ b/projects/operative-situation/src/app/features/operative-situation/components/reports-time-table/reports-time-table.component.less
@@ -8,9 +8,15 @@
 @period-border: 1px solid #e0e0e0;
 @period-border-right: 1px solid #b0bec5;
 
+:host {
+  display: block;
+  height: 100%;
+}
+
 .reports-time-table {
   display: flex;
   flex-direction: column;
+  height: 100%;
 
   .periods-and-consumption {
     display: flex;
