--- a/projects/operative-situation/src/app/features/operative-situation/components/operative-situation/operative-situation.component.html
+++ b/projects/operative-situation/src/app/features/operative-situation/components/operative-situation/operative-situation.component.html
@@ -3,6 +3,7 @@
   <mat-drawer mode="side" opened>
   <div class="container-fluid p-4 overflow-hidden">
 
+
     <div class="row">
       <div class="col-12">
         <button mat-stroked-button
@@ -12,13 +13,15 @@
           {{(selectedCompany$ | async)?.shortTitle}}
           <mat-icon>arrow_drop_down</mat-icon>
         </button>
-        <mat-menu #companiesMenu="matMenu" yPosition="below">
+        <mat-menu #companiesMenu="matMenu" yPosition="below" [style.width]="'261px'">
           <button mat-menu-item
                   class="pl-4 pr-4"
                   *ngFor="let company of (companies$ | async)"
                   (click)="selectCompany(company)">
-            <mat-icon color="primary">business</mat-icon>
-            <span class="mr-4">{{company.shortTitle}}</span>
+            <div class="pl-4 pr-4">
+              <mat-icon color="primary" class="mr-4 pr-4">business</mat-icon>
+              <span class="ml-2">{{company.shortTitle}}</span>
+            </div>
           </button>
         </mat-menu>
       </div>
@@ -33,7 +36,7 @@
   </mat-drawer>
 
   <mat-drawer-content>
-    <div class="container-fluid pt-3 pl-4 pr-4 pb-4">
+    <div class="container-fluid d-flex flex-column pt-3 pl-4 pr-4 pb-4 h-100">
       <div class="row">
 
         <div class="col">
@@ -49,7 +52,9 @@
 
         <div class="col-auto">
           <div class="application-controls pt-3">
-            <button mat-stroked-button [matMenuTriggerFor]="userMenu">
+            <button mat-stroked-button
+                    color="primary"
+                    [matMenuTriggerFor]="userMenu">
               <span *ngIf="user$ | async">{{(user$ | async)?.firstName + ' ' + (user$ | async)?.lastName}}</span>
               <mat-icon>arrow_drop_down</mat-icon>
             </button>
@@ -57,7 +62,7 @@
               <button mat-menu-item
                       class="pl-4 pr-4"
                       (click)="signOut()">
-                <mat-icon>exit_to_app</mat-icon>
+                <mat-icon color="primary">exit_to_app</mat-icon>
                 Выйти из приложения
               </button>
             </mat-menu>
@@ -65,7 +70,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row flex-fill">
         <div class="col-12 pt-5">
           <app-reports-time-table></app-reports-time-table>
           <!-- <app-report-add-dialog></app-report-add-dialog>-->
