--- a/projects/operative-situation/src/styles.less
+++ b/projects/operative-situation/src/styles.less
@@ -2,6 +2,7 @@
 @import '../../../node_modules/bootstrap/dist/css/bootstrap.css';
 @import '../../kolenergo-core/src/lib/ui/styles';
 @import './styles/fonts';
+@import './styles/fieldset';
 @import './styles/sign-in-dialog';
 @import './styles/sign-in-backdrop';
 @import './styles/form-step-dialog';
