--- a/projects/operative-situation/src/app/features/operative-situation/components/report/report.component.html
+++ b/projects/operative-situation/src/app/features/operative-situation/components/report/report.component.html
@@ -11,7 +11,7 @@
     </div>
   </div>
 
-  <div class="row" *ngIf="selectedReport$ | async">
+  <div class="row pt-4" *ngIf="selectedReport$ | async">
     <div class="col-12">
       <div class="row">
         <div class="col-12">
@@ -180,8 +180,10 @@
             </div>
             <div class="col">
               <span class="row-caption">Погодные условия</span>
-
-              <app-weather-summary [weatherSummary]="(selectedReport$ | async)?.weatherSummary"></app-weather-summary>
+              <app-weather-summary
+                [weatherSummary]="(selectedReport$ | async)?.weatherSummary"
+                [showMode]="true">
+              </app-weather-summary>
             </div>
           </div>
 
