--- a/projects/operative-situation/src/app/features/operative-situation/components/weather-summary/weather-summary.component.html
+++ b/projects/operative-situation/src/app/features/operative-situation/components/weather-summary/weather-summary.component.html
@@ -6,7 +6,7 @@
       <th class="text-center">Ветер,<br>м/с</th>
       <th class="pl-3">Осадки</th>
       <th></th>
-      <th class="pl-3 text-center">Режим ОРР/РПГ</th>
+      <th class="pl-3 text-center" *ngIf="showMode">Режим ОРР/РПГ</th>
     </thead>
     <tbody>
     <tr *ngFor="let location of weatherSummary.locations; let i = index;">
@@ -15,7 +15,7 @@
       <td class="text-center">{{location.weather.wind}}</td>
       <td class="pl-3">{{location.weather.precipitations}}</td>
       <td><img src="http://openweathermap.org/img/w/{{location.weather.icon}}.png" alt=""></td>
-      <td class="weather-mode pl-3 text-center border-bottom-0" rowspan="5" *ngIf="i === 0">
+      <td class="weather-mode pl-3 text-center border-bottom-0" rowspan="5" *ngIf="showMode === true && i === 0">
         {{(selectedReport$ | async)?.weatherORR ? 'ОРР' : (selectedReport$ | async)?.weatherRPG ? 'РПГ' : 'Нет'}}
       </td>
     </tr>
