--- a/projects/operative-situation/src/app/features/operative-situation/components/report/report.component.html
+++ b/projects/operative-situation/src/app/features/operative-situation/components/report/report.component.html
@@ -11,7 +11,8 @@
     </div>
   </div>
 
-  <div class="row pt-4" *ngIf="selectedReport$ | async">
+  <ng-container *ngIf=""></ng-container>
+  <div class="row pt-4 pb-4" *ngIf="selectedReport$ | async">
     <div class="col-12">
       <div class="row">
         <div class="col-12">
