--- a/projects/operative-situation/src/app/features/operative-situation/components/reports-time-table/reports-time-table.component.html
+++ b/projects/operative-situation/src/app/features/operative-situation/components/reports-time-table/reports-time-table.component.html
@@ -15,6 +15,7 @@
     </div>
   </div>
   <div class="report">
-    <app-report></app-report>
+    <app-report *ngIf="!inConsumptionMode"></app-report>
+    <app-consumption *ngIf="inConsumptionMode"></app-consumption>
   </div>
 </div>
