--- a/projects/operative-situation/src/app/features/operative-situation/components/division-tree-item/division-tree-item.component.less
+++ b/projects/operative-situation/src/app/features/operative-situation/components/division-tree-item/division-tree-item.component.less
@@ -3,6 +3,7 @@
 @expander-icon-font-color: #00796b;
 
 @division-title-font-family: 'Open Sans Light';
+@division-title-font-family-selected: 'Open Sans Regular';
 @division-title-font-size: 16px;
 @division-title-font-color: #78909c;
 @division-title-font-color-hover: #546e7a;
@@ -43,6 +44,7 @@
     }
 
     &.selected {
+      font-family: @division-title-font-family-selected;
       color: @division-title-font-color-selected;
     }
   }
